Closed
Bug 454029
Opened 17 years ago
Closed 17 years ago
[FIX]Bogus assertion "Invalid extends value"
Categories
(Core :: XBL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: bzbarsky)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
358 bytes,
application/xhtml+xml
|
Details | |
1.08 KB,
patch
|
sicking
:
review+
sicking
:
superreview+
|
Details | Diff | Splinter Review |
Bug 378518 introduced a bogus XBL assertion:
###!!! ASSERTION: Invalid extends value: 'Error', file /Users/jruderman/central/content/xbl/src/nsXBLService.cpp, line 989
Flags: in-testsuite+
![]() |
Assignee | |
Comment 1•17 years ago
|
||
Er.... yes. That should only be an assert for chrome XBL, if at all.
Flags: blocking1.9.1?
![]() |
Assignee | |
Comment 3•17 years ago
|
||
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #340271 -
Flags: superreview?(jonas)
Attachment #340271 -
Flags: review?(jonas)
![]() |
Assignee | |
Updated•17 years ago
|
Summary: Bogus assertion "Invalid extends value" → [FIX]Bogus assertion "Invalid extends value"
Attachment #340271 -
Flags: superreview?(jonas)
Attachment #340271 -
Flags: superreview+
Attachment #340271 -
Flags: review?(jonas)
Attachment #340271 -
Flags: review+
![]() |
Assignee | |
Comment 4•17 years ago
|
||
Pushed changeset 6153da5b239a.
![]() |
Assignee | |
Updated•17 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•