Bug 454029.  Don't assert bogus things. r+sr=sicking