content/xbl/src/nsXBLService.cpp
@@ -988,7 +988,8 @@ nsXBLService::GetBinding(nsIContent* aBoundElement, nsIURI* aURI,
                                               EmptyString(), 0, 0,
                                               nsIScriptError::errorFlag,
                                               "XBL");
-              NS_ERROR("Invalid extends value");
+              NS_ASSERTION(!IsChromeOrResourceURI(aURI),
+                           "Invalid extends value");
               return NS_ERROR_ILLEGAL_VALUE;
             }
 
